[tool.poetry]
name = "audit-compliance-ai"
version = "0.1.0"
description = ""
authors = ["chadrack MAYAMBA"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
