[tool.poetry]
name = "audit-compliance-ai"
version = "0.1.0"
description = ""
authors = ["chadrack MAYAMBA"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
chromadb = "^1.3.5"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-cov = "^7.0.0"
mypy = "^1.18.2"
flake8 = "^7.3.0"
black = "^25.11.0"
isort = "^7.0.0"
types-setuptools = "^80.9.0.20250822"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
